style.css
:root {
  --darkBlue: hsl(209, 23%, 22%);
  --veryDarkBlue: hsl(207, 26%, 17%);
  --veryDarkBlueText: hsl(200, 15%, 8%);
  --darkGrey: hsl(0, 0%, 52%);
  --veryLightGrey: hsl(0, 0%, 98%);
  --white: hsl(0, 0%, 100%);
}

* {
  padding: 0;
  margin: 0;
  font-family: "Nunito Sans", sans-serif;
  box-sizing: border-box;
  font-size: 14px;
}
body {
  background-color: var(--veryLightGrey);
}
nav {
  display: flex;
  align-items: center;
  justify-content: space-between;
  height: 6rem;
  padding: 0 1rem;
  background-color: var(--white);
  box-shadow: rgba(17, 17, 26, 0.05) 0px 1px 0px,
    rgba(17, 17, 26, 0.1) 0px 0px 8px;
}

.heading {
  font-weight: 800;
  color: var(--veryDarkBlue);
}

.changemode h2 {
  user-select: none;
  font-weight: 600;
  font-size: 0.8rem;
  margin-left: 0.5rem;
  color: var(--veryDarkBlue);
}

.changemode {
  display: flex;
  align-items: center;
  cursor: pointer;
}

.container-search {
  display: flex;
  flex-wrap: wrap;
  margin: 2rem 1rem;
  flex-direction: column;
}

.searchbar {
  display: flex;
  height: 3.5rem;
  background-color: var(--white);
  align-items: center;
  border-radius: 0.5rem;
  margin-bottom: 2.5rem;
  box-shadow: rgba(17, 17, 26, 0.05) 0px 1px 0px,
    rgba(17, 17, 26, 0.1) 0px 0px 8px;
}

.searchbar input {
  height: 100%;
  width: 100%;
  border: none;
  outline: none;
  border-radius: 0 0.5rem 0.5rem 0;
}

.searchbar i {
  margin: 0 2rem;
  color: lightgrey;
  font-size: 1.1rem;
}

::placeholder {
  font-size: 0.9rem;
  font-weight: 300;
  color: lightgray;
}

.dropdown {
  display: flex;
  align-items: center;
  height: 3.5rem;
  width: 65%;
  background-color: var(--white);
  padding: 0 1.5rem;
  border-radius: 0.5rem;
  box-shadow: rgba(17, 17, 26, 0.05) 0px 1px 0px,
    rgba(17, 17, 26, 0.1) 0px 0px 8px;
}

.region {
  width: 100%;
  padding-right: 10%;
  border: none;
  outline: none;
  font-size: 0.9rem;
  background-color: var(--white);
  color: var(--veryDarkBlueText);
}

.cards {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 100%;
  list-style: none;
}

.card {
  border-radius: 0.5rem;
  box-shadow: rgba(17, 17, 26, 0.05) 0px 1px 0px,
    rgba(17, 17, 26, 0.1) 0px 0px 8px;
  margin-bottom: 2.5rem;
  background-color: var(--white);
}

.card img {
  border-radius: 0.5rem 0.5rem 0 0;
  aspect-ratio: 16/9;
  width: 100%;
}
a {
  text-decoration: none;
}
.about-data {
  margin: 1.2rem;
}

.about-data h1 {
  min-height: 3.2rem;
  max-width: 260px;
  font-size: 1.2rem;
  color: var(--veryDarkBlueText);
  font-weight: 800;
}

.info-data {
  padding-bottom: 1.2rem;
}
.info-data p b {
  color: var(--veryDarkBlueText);
  font-weight: 600;
  font-size: 0.9rem;
}
.info-data p {
  color: var(--veryDarkBlueText);
  font-size: 0.9rem;
  margin: 0.4rem 0;
}

#dark {
  background-color: var(--veryDarkBlue);
}
#dark nav,
#dark .searchbar,
#dark .dropdown,
#dark input,
#dark .dropdown select,
#dark .card,
#dark .borders-name span,
#dark .backBtn button {
  background-color: var(--darkBlue);
}
#dark nav h1,
#dark .changemode h2,
#dark input[placeholder],
#dark .region,
#dark.info-data p,
#dark .info-data p b,
#dark .about-data h1,
#dark .info-data p span,
#dark .more-about p b,
#dark .more-about p span,
#dark .borders-name span,
#dark #border-heading b,
#dark .more-details h1,
#dark .backBtn button {
  color: white !important;
}
.detail-container {
  display: flex;
  flex-direction: column;
  padding: 2rem;
}

.backBtn {
  margin: 0.5rem 0;
}

.backBtn button {
  text-align: center;
  background-color: var(--white);
  border: none;
  padding: 0.5rem 2rem;
  border-radius: 0.3rem;
  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
}

.img-details {
  margin-top: 3rem;
}

.img-large {
  margin-bottom: 2rem;
}
.img-large img {
  width: 100%;
  aspect-ratio: 8/5;
}
.more-details h1 {
  font-size: 1.5rem;
  font-weight: 800;
  margin-bottom: 1rem;
}

.more-about p {
  line-height: 2rem;
}

.more-about p b {
  font-weight: 600;
}

#capital {
  margin-bottom: 2rem;
}
#language {
  margin-bottom: 2rem;
}

.Borders b {
  padding-bottom: 1rem;
  font-weight: 600;
  font-size: 1.25rem;
}

.borders-name {
  display: flex;
  flex-wrap: wrap;
}

.borders-name span {
  padding: 0.25rem 1rem;
  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
  margin-right: 1rem;
  border-radius: 0.25rem;
  margin-bottom: 1rem;
}
.fa-solid {
  color: white;
}

#border-heading {
  margin-bottom: 1rem;
}

.notFound {
  display: flex;
  justify-content: center;
  font-size: 3rem;
  padding: 6rem 0;
}

@media (min-width: 600px) {
  .backBtn button{
    font-size: 1.2rem;
  }
  .detail-container {
    padding: 3rem;
    padding-bottom: 0;
  }
  .img-details {
    display: flex;
    flex-direction: row;
    margin-top: 4rem;
    gap: 5%;
  }
  .img-large,
  .more-details {
    width: 100%;
  }
  #border-heading b {
    font-size: 1.5rem;
  }
  .borders-name span {
    font-size: 1.1rem;
  }
  .more-about p b {
    font-size: 1.1rem;
  }
  .more-about p span {
    font-size: 1.1rem;
  }

  .Borders > div {
    display: flex;
    align-items: center;
    padding-bottom: 2rem;
  }

  .borders-name {
    margin-left: 2rem;
  }

  .more-details {
    display: flex;
    justify-content: center;
    flex-direction: column;
  }
  .more-details h1 {
    font-size: 2rem;
    padding-bottom: 0.5rem;
  }

  .more-about {
    display: flex;
  }
  .more-about > div {
    margin-right: 1rem;
  }
  .more-about div {
    flex-grow: 1;
  }

  .cards {
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: space-around;
    padding: 0rem 0.5rem;
  }
  .card {
    margin: auto;
    margin-bottom: 2.5rem;
    margin-left: 0.5rem;
    margin-right: 0.5rem;
  }
  .container-search {
    flex-direction: row;
    justify-content: space-between;
    padding-left: 1rem;
    padding-right: 1rem;
    margin-bottom: 0;
  }
  .searchbar {
    min-width: 40%;
  }
  .dropdown {
    width: 15%;
    min-width: 15rem;
    margin-bottom: 2.5rem;
  }
  nav {
    padding: 2.5rem;
  }
  nav h1 {
    font-size: 1.5rem;
  }
  .changemode h2 {
    font-size: 1.2rem;
  }
}

